-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.1, 5.1.1, 5.2.0 Beta1 , 5.3.0
-
QCreator 2.8.1, Mac OS 10.8.4, Mac OS 10.9.2
Cannot change font size for QTableWidget header in Qt 5.1.1, event if try three known ways:
1. ui->tblView->horizontalHeader()->setFont(QFont("Tahoma", 20));
2. QTableView#tblView QHeaderView::section:horizontal
{ font-size: 20px; font-family: "Tahoma"; }3. QVariant UploadedTableModel::headerData(int section, Qt::Orientation orientation, int role) const
{ if (role == Qt::FontRole) return QFont("Tahoma", 14); ... }- is replaced by
-
QTBUG-37153 [Mac OS X] Can't change font for QHeaderView or QHeaderView::section on Mac OSX 10.9
-
- Closed
-
- relates to
-
QTBUG-50010 Changing font size Clips the text on header.
-
- Closed
-
For Gerrit Dashboard: QTBUG-33855 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
144259,2 | QHeaderView and others: Fix font lookup name | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |
144260,3 | Style sheets: detect and use font set on QHeaderViews | 5.11 | qt/qtbase | Status: MERGED | +2 | 0 |
144382,3 | QHeaderView: Reset cached section sizes on font and style change | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |