QHeaderView and others: Fix font lookup name

It should the the actual class name, without any suffix.

This also allows us to use the painter font when rendering
CE_HeaderLabel and, as a consequence, change QHeaderView's
font through the usual methods.

Change-Id: I0b13ee349f5fa505be66a9c884c26885f5fc468f
Task-number: QTBUG-33855
Task-number: QTBUG-37153
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@theqtcompany.com>
Reviewed-by: Olivier Goffart (Woboq GmbH) <ogoffart@woboq.com>

cregit: 15163d1939d86cfdcebd64ed2fb2cbc0cd56808a https://github.com/qt/qtbase/commit/15163d1939d86cfdcebd64ed2fb2cbc0cd56808a