src/widgets/kernel/qapplication.cpp
@@ -2714,7 +2714,7 @@ name|insert
 argument_list|(
 name|QByteArrayLiteral
 argument_list|(
-literal|"QListViewFont"
+literal|"QListView"
 argument_list|)
 argument_list|,
 operator|*
@@ -2743,7 +2743,7 @@ name|insert
 argument_list|(
 name|QByteArrayLiteral
 argument_list|(
-literal|"QHeaderViewFont"
+literal|"QHeaderView"
 argument_list|)
 argument_list|,
 operator|*
@@ -2801,7 +2801,7 @@ name|insert
 argument_list|(
 name|QByteArrayLiteral
 argument_list|(
-literal|"QComboMenuItemFont"
+literal|"QComboMenuItem"
 argument_list|)
 argument_list|,
 operator|*
@@ -2830,7 +2830,7 @@ name|insert
 argument_list|(
 name|QByteArrayLiteral
 argument_list|(
-literal|"QComboLineEditFont"
+literal|"QComboLineEdit"
 argument_list|)
 argument_list|,
 operator|*
